<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ProgressBar android:layout_width="wrap_content"
                 android:id="@+id/progress_bar"
                 android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/welcome_textview"
              android:gravity="center_horizontal"
              android:textSize="22sp"
              android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
              android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
              app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.133"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_change_pretty_name"
            android:text="@string/change_pretty_name"
            android:textColor="@color/colorYellow"
            android:background="@color/colorAccent"
            style="@style/Widget.AppCompat.Button.Colored" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintVertical_bias="0.304"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="47dp"
              android:id="@+id/change_pretty_name_edit_text"
              android:hint="@string/enter_pretty_name_here"
              android:textSize="18sp"
              android:imeOptions="actionDone|flagNoExtractUi"
              android:textStyle="italic" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
              android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintVertical_bias="0.302"/>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_submit"
            android:text="@string/submit_button"
            android:textColor="@color/colorYellow"
            android:background="@color/colorAccent"
            style="@style/Widget.AppCompat.Button.Colored" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.429" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.935"/>

    <ImageView android:id="@+id/profilePic"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginTop="8dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:srcCompat="@mipmap/ic_launcher" android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
               app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
               app:layout_constraintVertical_bias="0.73"/>

    <LinearLayout android:layout_width="96dp"
                  android:layout_height="157dp"
                  android:orientation="vertical" android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                  android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintVertical_bias="0.778" app:layout_constraintEnd_toStartOf="@+id/profilePic"
                  android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                  app:layout_constraintHorizontal_bias="0.636">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/unicorn_button"
                android:text="@string/unicorn_button"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/alien_button"
                android:text="@string/alien_button"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/robot_button"
                android:text="@string/robot_button"/>
    </LinearLayout>

    <LinearLayout android:layout_width="96dp"
                  android:layout_height="157dp"
                  android:orientation="vertical"
                  app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                  android:layout_marginRight="16dp" android:layout_marginBottom="8dp"
                  app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                  app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.778"
                  app:layout_constraintStart_toEndOf="@+id/profilePic" android:layout_marginLeft="8dp"
                  android:layout_marginStart="8dp">
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/crab_button"
                android:text="@string/crab_button"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/octopus_button"
                android:text="@string/octopus_button"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/frog_button"
                android:text="@string/frog_button"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>