<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText android:layout_width="259dp"
              android:layout_height="wrap_content"
              android:id="@+id/username"
              android:hint="@string/username"
              android:textStyle="italic"
              android:textSize="18sp"
              android:inputType="text" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp"
              app:layout_constraintVertical_bias="0.144" app:layout_constraintEnd_toStartOf="@+id/button"
              app:layout_constraintHorizontal_bias="0.333"/>

    <Button android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145"
            android:id="@+id/button"
            android:paddingStart="2dp"
            android:paddingLeft="2dp"/>

    <ImageView android:layout_width="120dp"
               android:layout_height="119dp"
               android:id="@+id/checkmark"
               android:src="@drawable/ic_check_black_24dp" android:layout_marginBottom="8dp"
               app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
               android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
               android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/connected"
              android:gravity="center_horizontal"
              android:text="@string/connection_succeed" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintVertical_bias="0.644"/>
</android.support.constraint.ConstraintLayout>